[gd_scene load_steps=11 format=3 uid="uid://idv8oaayck66"]

[ext_resource type="Texture2D" uid="uid://bqmd0iata7ml" path="res://homepg/fundo_1.png" id="1_mfjt0"]
[ext_resource type="Script" uid="uid://d334s5lb0bghb" path="res://script/cenas/title_screem.gd" id="1_tlp47"]
[ext_resource type="Texture2D" uid="uid://djk36exotnocj" path="res://homepg/logo.png" id="2_vb8bm"]
[ext_resource type="Theme" uid="uid://dlm80snudlv8p" path="res://theme/deful_bnt.tres" id="3_43qb3"]
[ext_resource type="Script" uid="uid://ci0m7das8v64e" path="res://script/botoes/bnt_start.gd" id="4_kvs6i"]
[ext_resource type="Texture2D" uid="uid://cnhhvhajs2b3e" path="res://homepg/boneco_1.png" id="5_ani4q"]
[ext_resource type="AudioStream" uid="uid://bihx7jlyvdbj5" path="res://songs/button_sfx.mp3" id="5_mfjt0"]

[sub_resource type="Animation" id="Animation_e4ou3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1.0514921, 1.0514921, 1.0514921, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/HBoxContainer/personagem:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_pbcer"]
resource_name = "new_animation"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.100000024, 0.40000004),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1.0514921, 1.0514921, 1.0514921, 0), Color(1.0514921, 1.0514921, 1.0514921, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.23333335, 0.8),
"transitions": PackedFloat32Array(0.18301071, 1),
"update": 0,
"values": [Vector2(-600, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/HBoxContainer/personagem:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.100000024, 0.7, 1.1),
"transitions": PackedFloat32Array(1, 1.0717726, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7g4ok"]
_data = {
&"RESET": SubResource("Animation_e4ou3"),
&"new_animation": SubResource("Animation_pbcer")
}

[node name="TitleScreem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tlp47")

[node name="bg" type="TextureRect" parent="."]
modulate = Color(1.0514921, 1.0514921, 1.0514921, 1)
self_modulate = Color(0.6693994, 0.82464993, 0.82894874, 1)
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_mfjt0")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 70
theme_override_constants/margin_bottom = 70

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="logo" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
self_modulate = Color(1, 0.9647059, 1, 1)
layout_mode = 2
texture = ExtResource("2_vb8bm")

[node name="bnt_start" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_43qb3")
text = "START"
script = ExtResource("4_kvs6i")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MarginContainer/HBoxContainer/VBoxContainer/bnt_start"]
stream = ExtResource("5_mfjt0")
volume_db = -20.0

[node name="bnt_sair" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_43qb3")
text = "SAIR"
script = ExtResource("4_kvs6i")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MarginContainer/HBoxContainer/VBoxContainer/bnt_sair"]
stream = ExtResource("5_mfjt0")
volume_db = -20.429

[node name="bnt_creditos" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_43qb3")
text = "CREDITOS"
script = ExtResource("4_kvs6i")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MarginContainer/HBoxContainer/VBoxContainer/bnt_creditos"]
stream = ExtResource("5_mfjt0")
volume_db = -20.0

[node name="personagem" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_ani4q")
expand_mode = 3

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -563.0
offset_top = -65.0
grow_horizontal = 0
grow_vertical = 0
text = "Linkedin: https://www.linkedin.com/in/jhessye-lorrayne-924733243/
Github: https://github.com/Jhessye"
vertical_alignment = 1
autowrap_mode = 3

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7g4ok")
}
autoplay = "new_animation"

[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/bnt_start" to="MarginContainer/HBoxContainer/VBoxContainer/bnt_start" method="_on_mouse_entered"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/bnt_start" to="MarginContainer/HBoxContainer/VBoxContainer/bnt_start" method="_on_pressed"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/bnt_sair" to="MarginContainer/HBoxContainer/VBoxContainer/bnt_start" method="_on_bnt_sair_mouse_entered"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/bnt_sair" to="MarginContainer/HBoxContainer/VBoxContainer/bnt_start" method="_on_bnt_sair_pressed"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/bnt_creditos" to="MarginContainer/HBoxContainer/VBoxContainer/bnt_start" method="_on_bnt_creditos_mouse_entered"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/bnt_creditos" to="MarginContainer/HBoxContainer/VBoxContainer/bnt_start" method="_on_bnt_creditos_pressed"]
